# ClampEngine

./: CMakeLists.txt  ClampEngine.sln  README.md
ClampEngine/: ClampEngine.cpp  ClampEngine.h  ClampEngine.rc  ClampEngine.vcxproj  ClampEngine.vcxproj.filters  ContentBrowser.cpp  ContentBrowser.h  Globals.cpp  Globals.h  ProjectManager.h  Scene.cpp  Scene.h  UI.cpp  UI.h  imgui.ini  main.cpp  project_files.txt  resource.h  resource1.h  resource2.h  zxc.lua
ClampEngine/Editor/ClampEngine/: ClampEngine.cpp  ClampEngine.h
ClampEngine/Editor/Globals/: Globals.cpp  Globals.h
ClampEngine/Editor/Main/: main.cpp
ClampEngine/Editor/ModelImporter/: ModelImporter.cpp  ModelImporter.h
ClampEngine/Editor/Scene/: Scene.cpp
ClampEngine/Editor/UI/ProjectMenuTop/: ProjectMenuTop.cpp  ProjectMenuTop.h
ClampEngine/Editor/UI/TestUI/: UI.cpp
ClampEngine/Project/Manager/: ProjectManager.h
ClampEngine/ResourceManager/: ResourceManager.cpp  ResourceManager.h
ClampEngine/RlImGui/: rlImGui.cpp  rlImGui.h
ClampEngine/Utils/Vector/: VectorUtils.cpp  VectorUtils.h
src/: main.cpp
